# project

./: 1112  OpenTLD.sh  OpenTLD.sh~  OpenTLD_control.sh  OpenTLD_control.sh~  OpenTLD_cuda_removed.sh  OpenTLD_ocl.sh  apple.xml  apple_23_1.xml  beignet.sh  beignet.sh~  cascade.xml  copy_opentld.sh  copy_opentld.sh~  dma buffer sharing  log.txt  opencv-2.4.10.1.sh  opencv-2.4.9.sh  opencv-3.0.0-alpha.sh  orange.xml  patch.sh  qopentld.sh  remove-intel-driver.sh  ve482_1203
Face/: Makefile  Makefile~  arithm_LUT_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  convertC3C4_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  cvt_color_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  face  facedetect.cpp  haarobjectdetect_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_histogram_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_integral_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_resize_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb
FaceDetection/: .cproject  .facedetect.cpp.swp  README.md  Readme  arithm_LUT_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  cvt_color_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  face  facedetect.cpp  facedetect3.cpp  facedetect_cpu.cpp  facedetect_merge_box.cpp  facedetect_opencv.cpp  haarobjectdetect_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_histogram_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_integral_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_resize_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  ocl_facedetection.cpp  ocl_facedetection.hpp
OpenTLD/: CMakeLists.txt
OpenTLD/src/opentld/: CMakeLists.txt  OpenTLD.cpp  QOpenTLD.cpp
OpenTLD/src/opentld/main/: Config.cpp  Gui.cpp  Gui.h  Main.cpp  Main.h  Settings.cpp  ocl.cpp
OpenTLD/src/opentld/qopentld/: ConfigDialog.cpp  ConfigDialog.ui
OpenTLD_control/: 0003-autofocus2.patch
OpenTLD_cuda_removed/: CMakeLists.txt
OpenTLD_ocl/: 0002-autofocus2.patch  CMakeLists.txt  CMakeLists.txt~
Trainer/: Makefile  Makefile2  Makefile2~  Makefile~  Trainer.cpp~  Trainer2.cpp~
auto_focus_patchset/: 0001-autofocus.patch
compare/: arithm_magnitude_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  arithm_sum_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  arithm_transpose_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  convertC3C4_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  cvt_color_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  filtering_sep_filter_singlepass_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  haarobjectdetect_scaled2_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_integral_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  imgproc_integral_sum_Intel Gen OCL Driver_Intel(R) HD Graphics IvyBridge M GT2.clb  opentld_cpu  opentld_ocl  qopentld_cpu  (+1 more)
(+321 files in other folders)
